Fix sidebar scroll on mobile devices

--- a/src/css/application.styl
+++ b/src/css/application.styl
@@ -28,7 +28,7 @@ a{
   padding-left $sidebarWidth
 
 .body-container
-  margin 23px
+  padding 23px
   width auto
   max-width 730px
 
