--- a/src/css/modules/sidebar.styl
+++ b/src/css/modules/sidebar.styl
@@ -104,6 +104,8 @@
 
 @media (max-width: 767px)
   body.sidebar-open
+    overflow hidden
+
     .sidebar-trigger
       right 10px
       top 9px
